# grokrs

./: .aivcsignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  no-ai-attribution.yml  publish-crates.yml  release-binaries.yml
configs/: grokrs.dev.toml  grokrs.example.toml
crates/grokrs-api/: Cargo.toml
crates/grokrs-api/src/: auth.rs  client.rs  lib.rs  tool_loop.rs
crates/grokrs-api/src/endpoints/: api_key.rs  batches.rs  chat.rs  documents.rs  files.rs  images.rs  mod.rs  models.rs  responses.rs  tokenize.rs  tts.rs  util.rs  videos.rs  voice.rs
crates/grokrs-api/src/management/: client.rs  collections.rs  documents.rs  mod.rs
crates/grokrs-api/src/mcp/: client.rs  mod.rs  transport.rs  types.rs
crates/grokrs-api/src/streaming/: events.rs  parser.rs
crates/grokrs-api/src/transport/: auth.rs  client.rs  error.rs  mod.rs  policy_bridge.rs  policy_gate.rs  retry.rs  sse.rs  telemetry.rs  websocket.rs
crates/grokrs-api/src/types/: api_key.rs  batches.rs  builtin_tools.rs  chat.rs  collection_documents.rs  collections.rs  common.rs  documents.rs  error.rs  files.rs  function_call.rs  images.rs  mcp_tool.rs  message.rs  mod.rs  model.rs  responses.rs  stream.rs  structured_output.rs  tokenize.rs  tool.rs  tts.rs  usage.rs  videos.rs  voice.rs
crates/grokrs-api/tests/: encrypted_reasoning.rs  transport_integration.rs  voice_agent.rs
crates/grokrs-cap/: Cargo.toml
crates/grokrs-cap/src/: lib.rs
crates/grokrs-cli/: Cargo.toml
crates/grokrs-cli/src/: lib.rs  main.rs  telemetry.rs
crates/grokrs-cli/src/agent/: executor.rs  mcp_adapter.rs  mod.rs  policy_bridge.rs
crates/grokrs-cli/src/commands/: agent.rs  api.rs  auth.rs  chat.rs  collections.rs  generate.rs  mod.rs  models.rs  search.rs  sessions.rs  store.rs  voice.rs
crates/grokrs-cli/src/repl/: backend.rs  commands.rs  grok_backend.rs  history.rs  mod.rs
crates/grokrs-cli/tests/: cli_smoke.rs  cost_report.rs  generate_tests.rs  headless_agent.rs  models_tests.rs  sessions_tests.rs
crates/grokrs-core/: Cargo.toml
crates/grokrs-core/src/: lib.rs
crates/grokrs-policy/: Cargo.toml
crates/grokrs-policy/src/: lib.rs
crates/grokrs-session/: Cargo.toml
crates/grokrs-session/src/: lib.rs
crates/grokrs-store/: Cargo.toml
crates/grokrs-store/src/: cost.rs  lib.rs  memory.rs  session.rs  transcript.rs  types.rs  usage.rs
crates/grokrs-store/src/migrations/: mod.rs  v001.rs  v002.rs  v003.rs
crates/grokrs-store/tests/: integration.rs  memory.rs
crates/grokrs-tool/: Cargo.toml
crates/grokrs-tool/src/: erased.rs  error.rs  lib.rs  registry.rs
crates/grokrs-tool/src/tools/: forget.rs  git_add.rs  git_commit.rs  git_diff.rs  git_status.rs  list_directory.rs  mod.rs  read_file.rs  recall.rs  remember.rs  run_command.rs  write_file.rs
crates/grokrs-tool/tests/: git_tools.rs  mcp_adapter.rs
docs/articles/: 2026-04-06-building-grokrs-with-multi-llm-engineering.md
docs/design/: 00_ARCHITECTURE.md  01_SQLITE_STATE.md
docs/development/grokrs/: 01_SPEC.md  03_IMPLEMENTATION_PLAN.md  04_XAI_API_IMPLEMENTATION_PLAN.md  05_AGENT_ORCHESTRATION_PROMPT.md
docs/ops/: 00_BOOTSTRAP.md
docs/reviews/: AI_SLOP_REVIEW_GUIDE.md  CROSS_DAG_INTEGRATION.toml
docs/reviews/approval-broker/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/auth-provider-flow/2026-04-07/: CONTRACT_DECLARATION.toml  EVIDENCE_MATRIX.toml  IMPLEMENTATION_DAG.toml  IMPLEMENTATION_PLAN.md  REVIEW_READINESS.toml
docs/reviews/batch-extensions/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/bootstrap/2026-04-05/: CONTRACT_DECLARATION.toml  EVIDENCE_MATRIX.toml  IMPLEMENTATION_DAG.toml  README.md  REVIEW_READINESS.toml  TRACEABILITY.toml
docs/reviews/clippy-pedantic/: REUSABLE_PEDANTIC_DAG.toml
docs/reviews/clippy-pedantic/2026-04-06/: IMPLEMENTATION_DAG.toml  IMPLEMENTATION_PROMPT.md
docs/reviews/collections-management/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/competitive-features/2026-04-06/: IMPLEMENTATION_DAG.toml
docs/reviews/competitive-gaps-r2/2026-04-06/: IMPLEMENTATION_DAG.toml
docs/reviews/document-search/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/mcp-server/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/remote-mcp-tools/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/responses-enrichment/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/security-hardening/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/sqlite-store/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/tts-api/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/reviews/xai-api-client/2026-04-05/: IMPLEMENTATION_DAG.toml
docs/specs/: 00_SPEC.md  01_XAI_API_CLIENT.md  02_SQLITE_STORE.md  03_APPROVAL_BROKER.md  04_MCP_SERVER.md
examples/: effects.md
scripts/: bootstrap_repo.sh
