[workspace]
members = [
  "crates/grokrs-core",
  "crates/grokrs-cap",
  "crates/grokrs-policy",
  "crates/grokrs-session",
  "crates/grokrs-tool",
  "crates/grokrs-cli",
  "crates/grokrs-api",
  "crates/grokrs-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Verivus Labs"]
repository = "https://github.com/verivus-oss/grokrs"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
bytes = "1"
pin-project-lite = "0.2"
url = "2"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic"] }
serial_test = "3"

