[package]
name = "grokrs-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
grokrs-core = { path = "../grokrs-core" }
serde.workspace = true
serde_json = { workspace = true }
thiserror.workspace = true
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "sync"] }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

# Optional: OpenTelemetry instrumentation (behind `otel` feature)
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = ["tracing", "tracing-opentelemetry"]

[dev-dependencies]
serial_test.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
wiremock = "0.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
