[package]
name = "grokrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "User-facing CLI for grokrs chat, agent, voice, model, and generation workflows."

[lib]
name = "grokrs_cli"
path = "src/lib.rs"

[[bin]]
name = "grokrs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64 = "0.22"
clap.workspace = true
grokrs-api.workspace = true
grokrs-cap.workspace = true
grokrs-core.workspace = true
grokrs-policy.workspace = true
grokrs-session.workspace = true
grokrs-tool.workspace = true
grokrs-store.workspace = true
futures.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
rustyline = "18"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "io-util", "io-std"] }

# Optional: OpenTelemetry instrumentation (behind `otel` feature)
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[features]
default = []
audio = []
otel = [
    "tracing",
    "tracing-subscriber",
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "grokrs-api/otel",
    "grokrs-tool/otel",
    "grokrs-session/otel",
]

[dev-dependencies]
serial_test.workspace = true
tempfile = "3"
wiremock = "0.6"
