[package]
name = "grokrs-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Effect classification and deny-by-default policy evaluation for grokrs."

[dependencies]
grokrs-cap.workspace = true
grokrs-core.workspace = true
