[package]
name = "grokrs-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
grokrs-core = { path = "../grokrs-core" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[features]
test-support = []

[dev-dependencies]
grokrs-store = { path = ".", features = ["test-support"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tempfile = "3"
