[package]
name = "grokrs-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLite-backed runtime state, memory, transcript, and usage store for grokrs."

[dependencies]
grokrs-core.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[features]
test-support = []

[dev-dependencies]
grokrs-store = { version = "0.1.0-alpha.1", path = ".", features = ["test-support"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"
