[package]
name = "grokrs-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tool registry, built-in tools, and effect declarations for grokrs."

[dependencies]
grokrs-policy.workspace = true
grokrs-cap.workspace = true
grokrs-store.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
git2 = "0.19"

# Optional: OpenTelemetry instrumentation (behind `otel` feature)
tracing = { workspace = true, optional = true }

[features]
default = []
otel = ["tracing"]

[dev-dependencies]
serial_test.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
grokrs-api.workspace = true
grokrs-cli.workspace = true
wiremock = "0.6"
